# MTCSync

./: .gitignore  LICENSE.md  NOTICE.md  README.md  mpvex.py  mtc.py  mtc_test.py  mtcsync.py  pyproject.toml  requirements.txt
docs/: lighting.md  scenario.md  timeline.md
mtcsync/: integrator.py  mpvex.py  mtc.py  mtcsync.py
mtcsync/gui/: liveShowGUI.py
