[tool.poetry]
name = "mtcsync"
version = "0.1.0"
description = ""
authors = ["noko1024 <ynoko1024@gmail.com> yugu0202 <applerin1119@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
timecode = "<1.3.2"
questionary = "^2.0.1"
mpv = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
